--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<iframe id="iframe" src='https://concrete-weight-zohhvspaau2uvelykwo3.wnext.app/apps/3P4obfyXbG4sMh3DTiisrkDxNsfz/pos' style='max-width: 100%; border: 0;'> </iframe>
+<iframe src='https://pos.btcpayserver.it/apps/3Dq1Ago7FV5GG8ff6cAzHBuobDi1/pos' style='max-width: 100%; border: 0;'></iframe>
 <script>
   window.onload = function() {
     var iframe = document.getElementById("iframe");
