--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <title>VCC WORLD</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel = "icon" href = "https://img.icons8.com/?size=512&id=46096&format=png" type = "image/x-icon">
+<meta charset="UTF-8">
+<title>VCC WORLD</title>
+<link rel = "icon" href = "https://img.icons8.com/?size=512&id=46096&format=png" type = "image/x-icon">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
+
 </head>
-	
 <body>
+<!-- partial:index.partial.html -->
+<div class="loading-page">
+  <div class="counter">
+    <p>loading</p>
+    <h1>0%
+      <!--
+      h1.abs loading
+      h1.abs.color loading
+      -->
+    </h1>
+    <hr/>
+  </div>
+</div>
+
+
 <iframe id="iframe" src='https://pos.btcpayserver.it/apps/3Dq1Ago7FV5GG8ff6cAzHBuobDi1/pos' style='max-width: 100%; border: 0;'></iframe>
 	
 <script>
@@ -20,6 +36,10 @@
     iframe.style.height = "100%";
     iframe.style.zIndex = "2";
   }
-</script>	
+</script>
+
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
