--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Loading Page</title>
+    <title>VCC WORLD is Loading...</title>
     <link rel="stylesheet" href="./style.css">
     <style>
       /* Center the loading animation vertically and horizontally */
@@ -22,7 +22,7 @@
       // Redirect to the shop.html page after 5 seconds
       setTimeout(function() {
         window.location.href = "shop.html";
-      }, 5000);
+      }, 2500);
     </script>
   </head>
   <body>
